fix(config): standardize APP_ENV and fix WEB_APP_HOST URL
1. Dockerfile: Fix APP_ENV check to use exact match
   - Change `grep -q "test"` to `[ "$APP_ENV" = "testing" ]`
   - Prevents false matches like "docker-test"

2. Remove docker-dev.yml and docker-test.yml
   - Use development.yml and testing.yml with env var overrides
   - Reduces config duplication

3. docker-compose files: Use standard APP_ENV values
   - docker-compose.dev.yml: APP_ENV=development
   - docker-compose.test.yml: APP_ENV=testing
   - Add MONGODB_URI and TEMPORAL_SERVER_ADDRESS env overrides

4. Kubernetes deployments: Fix APP_ENV and WEB_APP_HOST
   - Add APP_ENV env var (preview/production)
   - Add https:// prefix to WEB_APP_HOST to prevent URL duplication

5. custom-environment-variables.yml: Fix datadog env var name
   - Change DATADOG_SITE to DATADOG_SITE_NAME for consistency

Fixes #578

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,9 +5,11 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        APP_ENV: 'docker-test'
+        APP_ENV: 'testing'
     environment:
-      APP_ENV: 'docker-test'
+      APP_ENV: 'testing'
+      MONGODB_URI: 'mongodb://app-db:27017/flask-react-template-test'
+      TEMPORAL_SERVER_ADDRESS: 'temporal:7233'
     command: "npm run test:docker"
     depends_on:
       app-db:
