--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        APP_ENV: 'docker-dev'
+        APP_ENV: 'development'
     environment:
-      APP_ENV: 'docker-dev'
+      APP_ENV: 'development'
+      MONGODB_URI: 'mongodb://app-db:27017/flask-react-template-dev'
+      TEMPORAL_SERVER_ADDRESS: 'temporal:7233'
       PIPENV_VENV_IN_PROJECT: '1'
     # Ensure dependencies are installed before starting services
     # Check if node_modules has content, not just if directory exists
