--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -62,8 +62,10 @@ spec:
           ports:
             - containerPort: 8080
           env:
+            - name: APP_ENV
+              value: production
             - name: WEB_APP_HOST
-              value: $KUBE_INGRESS_HOSTNAME
+              value: https://$KUBE_INGRESS_HOSTNAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
