fix(kube): standardize network policy to use component label for app pods
Use component: $KUBE_NS instead of app: $KUBE_APP for consistent matching
across all preview deployments, preventing downtime when commit hashes
change between deployments.

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -34,7 +34,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: $KUBE_APP
+      component: $KUBE_NS
   policyTypes:
     - Egress
   egress:
@@ -111,7 +111,7 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              app: $KUBE_APP
+              component: $KUBE_NS
       ports:
         - protocol: TCP
           port: 7233
