--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -142,7 +142,7 @@ spec:
     # Allow database connections
     - ports:
         - protocol: TCP
-          port: 5432   # PostgreSQL
+          port: 25060  # DigitalOcean managed PostgreSQL
         - protocol: TCP
           port: 27017  # MongoDB
 
