--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -37,7 +37,7 @@ public:
     service: 'DATADOG_SERVICE'
     sessionReplaySampleRate: 'DATADOG_SESSION_REPLAY_SAMPLE_RATE'
     sessionSampleRate: 'DATADOG_SESSION_SAMPLE_RATE'
-    site: 'DATADOG_SITE'
+    site: 'DATADOG_SITE_NAME'
   default_otp:
     enabled: 'DEFAULT_OTP_ENABLED'
     code: 'DEFAULT_OTP_CODE'
