Revert "fix(kube): standardize network policy to use component label for app pods"
This reverts commit 40a892e39bc94a18b8dae1f4137c1d3e56f06484.

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -34,7 +34,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      component: $KUBE_NS
+      app: $KUBE_APP
   policyTypes:
     - Egress
   egress:
@@ -111,7 +111,7 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              component: $KUBE_NS
+              app: $KUBE_APP
       ports:
         - protocol: TCP
           port: 7233
