chore(kube): skip CKV2_K8S_6 check for deployments
NetworkPolicy is defined in network-policy.yaml but IaC scanner only
analyzes changed files, causing false positive for missing policy.

--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    # checkov:skip=CKV2_K8S_6:NetworkPolicy defined in network-policy.yaml but not visible to partial file scan
 spec:
   replicas: 1
   selector:
