fix(kube): add /tmp volume mount to python-worker in temporal deployment
The python-worker container crashes on startup because Pipenv needs
a writable /tmp directory but readOnlyRootFilesystem: true makes it
read-only. Add system-tmp emptyDir volume mounted at /tmp.

Fixes #590

--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -231,6 +231,8 @@ spec:
               mountPath: /opt/app/tmp
             - name: logs
               mountPath: /opt/app/logs
+            - name: system-tmp
+              mountPath: /tmp
             - name: doppler-secrets
               mountPath: /opt/app/secrets
           livenessProbe: 
@@ -254,6 +256,8 @@ spec:
         - name: tmp
           emptyDir: {}
         - name: logs
+          emptyDir: {}
+        - name: system-tmp
           emptyDir: {}
         - name: temporal-config
           emptyDir: {}
