fix(kube): align deployment paths with Dockerfile WORKDIR /app
The Kubernetes deployment files used /opt/app but the Dockerfile uses
/app as WORKDIR. This mismatch caused python-worker to fail because
Pipenv couldn't find the virtualenv at the expected path.

This matches the approach taken in Foundation PR #24.

--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -79,13 +79,13 @@ spec:
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
-              mountPath: /opt/app/tmp
+              mountPath: /app/tmp
             - name: logs
-              mountPath: /opt/app/logs
+              mountPath: /app/logs
             - name: system-tmp
               mountPath: /tmp
             - name: secret-ref
-              mountPath: /opt/app/secrets
+              mountPath: /app/secrets
           startupProbe:
             httpGet:
               path: /
