docs: update documentation to remove temporal references
- Update deployment.md: remove temporal deployment details and architecture
- Update getting-started.md: remove temporal CLI prerequisite and references
- Update AGENTS.md: remove temporal from stack and guidelines
- Update post-deploy.sh: remove temporal deployment references
- Update ingress.yaml: remove temporal worker hostname
- Update docker-compose.test.yml: fix test command
- Update package.json: remove redundant test:docker script

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
     environment:
       APP_ENV: 'testing'
       MONGODB_URI: 'mongodb://app-db:27017/flask-react-template-test'
-    command: "npm run test:docker"
+    command: "npm run test"
     depends_on:
       app-db:
         condition: service_started
