--- a/package.json
+++ b/package.json
@@ -20,17 +20,12 @@
     "lint:fix": "eslint --fix .",
     "lint:py": "make run-lint",
     "script": "make run-script file=$npm_config_file",
-    "serve": "bash -c 'make serve ARGS=\"$*\"' --",
+    "serve": "concurrently npm:serve:assets npm:serve:backend npm:serve:frontend",
     "serve:assets": "cpx \"src/assets/**/*.*\" dist/assets --watch",
     "serve:backend": "make run-engine",
-    "serve:temporal-server": "make run-temporal-server",
-    "serve:temporal": "make run-temporal",
     "serve:frontend": "webpack serve --output-path dist/public --config src/apps/frontend/webpack.dev.js --hot --progress",
     "start": "npm run serve:backend",
     "test": "cross-env APP_ENV=testing make run-test",
-    "test:docker": "concurrently --kill-others --success first npm:test:docker:*",
-    "test:docker:run": "make run-test",
-    "test:docker:temporal-server": "make run-temporal-server",
     "prepare": "husky"
   },
   "author": "jalantechnologies",
