feat: add Celery worker infrastructure for async job processing
- Add Celery application with Redis as message broker
- Implement base Worker class with Sidekiq-style API (perform_async, perform_at, perform_in)
- Add WorkerRegistry for automatic worker discovery and cron scheduling
- Include Flower dashboard for monitoring workers and tasks
- Create Kubernetes deployments for workers, beat scheduler, and Redis
- Add comprehensive worker documentation and development tools
- Update Docker Compose and build scripts for local development

Key features:
- Declarative cron scheduling with automatic registration
- Independent worker scaling from web pods
- Queue-based routing (critical, default, low priority)
- Security-hardened K8s deployments with health probes
- Local development support with hot reload

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -6,6 +6,10 @@ mailer:
 mongodb:
   uri: 'MONGODB_URI'
 
+celery:
+  broker_url: 'CELERY_BROKER_URL'
+  result_backend: 'CELERY_RESULT_BACKEND'
+
 
 
 web_app_host: 'WEB_APP_HOST'
