--- a/config/testing.yml
+++ b/config/testing.yml
@@ -1,6 +1,10 @@
 mongodb:
   uri: 'mongodb://localhost:27017/flask-react-template-test'
 
+celery:
+  broker_url: 'redis://localhost:6379/1'
+  result_backend: 'redis://localhost:6379/1'
+
 
 
 mailer:
