--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "lint:fix": "eslint --fix .",
     "lint:py": "make run-lint",
     "script": "make run-script file=$npm_config_file",
-    "serve": "concurrently npm:serve:assets npm:serve:backend npm:serve:frontend",
+    "serve": "concurrently npm:serve:assets npm:serve:backend npm:serve:worker npm:serve:beat npm:serve:flower npm:serve:frontend",
     "serve:assets": "cpx \"src/assets/**/*.*\" dist/assets --watch",
     "serve:backend": "make run-engine",
+    "serve:worker": "make run-worker",
+    "serve:beat": "make run-beat",
+    "serve:flower": "make run-flower",
     "serve:frontend": "webpack serve --output-path dist/public --config src/apps/frontend/webpack.dev.js --hot --progress",
     "start": "npm run serve:backend",
     "test": "cross-env APP_ENV=testing make run-test",
