--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,10 @@ datadog-api-client = "==2.31.0"
 aiohttp = ">=3.13.3"
 protobuf = "==6.33.5"
 urllib3 = ">=2.6.3"
+celery = "*"
+redis = "*"
+celery-redbeat = "*"
+flower = "*"
 
 [dev-packages]
 black = "==24.8.0"
