--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,9 +9,13 @@ services:
     environment:
       APP_ENV: 'testing'
       MONGODB_URI: 'mongodb://app-db:27017/flask-react-template-test'
+      CELERY_BROKER_URL: 'redis://redis:6379/1'
+      CELERY_RESULT_BACKEND: 'redis://redis:6379/1'
     command: "npm run test"
     depends_on:
       app-db:
+        condition: service_started
+      redis:
         condition: service_started
     # Use named volume to avoid permission issues with bind mounts
     volumes:
@@ -22,6 +26,12 @@ services:
     command: mongod --quiet --logpath /dev/null
     ports:
       - '27017:27017'
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
+    command: redis-server
 
 
 
