--- a/lib/kube/shared/ingress.yaml
+++ b/lib/kube/shared/ingress.yaml
@@ -13,6 +13,7 @@ spec:
   tls:
     - hosts:
         - $KUBE_INGRESS_HOSTNAME
+        - $KUBE_INGRESS_WORKER_HOSTNAME
       secretName: $KUBE_APP-cert-key
   rules:
     - host: $KUBE_INGRESS_HOSTNAME
@@ -25,4 +26,14 @@ spec:
                 name: $KUBE_APP-service
                 port:
                   number: 8080
+    - host: $KUBE_INGRESS_WORKER_HOSTNAME
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: $KUBE_APP-flower
+                port:
+                  number: 5555
 
