fix: update network policy to allow worker pods Redis access
- Change app egress policy selector from app label to component label
- Allows worker pods to connect to Redis for Celery operations
- Fixes DNS resolution issues in worker containers

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -34,7 +34,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: $KUBE_APP
+      component: $KUBE_NS
   policyTypes:
     - Egress
   egress:
